--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,25 @@
     <string name="error_showing_dog_not_found">Error showing dog, dog not found</string>
     <string name="dog_index_format">#%d</string>
     <string name="dog_life_expectancy_format">%s years</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="do_not_have_an_account">Do not have an account?</string>
+    <string name="register">Register</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="sign_up">Sign up</string>
+    <string name="email_is_not_valid">Email is not valid</string>
+    <string name="password_must_not_be_empty">Password must not be empty</string>
+    <string name="passwords_do_not_match">Passwords do not match</string>
+    <string name="error_sign_up">Error signing up</string>
+    <string name="error_sign_in">Error logging in</string>
+    <string name="user_already_exists">User already exists</string>
+    <string name="unknown_error">There was an error</string>
+    <string name="unknown_host_exception">There is no internet connection</string>
+    <string name="there_was_an_error">There was an error</string>
+    <string name="wrong_user_or_password">Wrong user or password</string>
+    <string name="this_is_a_content_description">This is a content description</string>
+    <string name="logout">Logout</string>
 </resources>
