--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="wrong_user_or_password">Wrong user or password</string>
     <string name="this_is_a_content_description">This is a content description</string>
     <string name="logout">Logout</string>
+    <string name="error_adding_dog">There was an error adding the dog</string>
 </resources>
