- Primer acercamiento a la implementacion de Jetpack Compose (se cambio la actividad de detalle del perro).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="this_is_a_content_description">This is a content description</string>
     <string name="logout">Logout</string>
     <string name="error_adding_dog">There was an error adding the dog</string>
+    <string name="title_activity_dog_detail_compose">DogDetailComposeActivity</string>
 </resources>
